--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "mongoose": "^5.0.12"
   },
   "devDependencies": {
-    "nodemon": "^1.17.3",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "nodemon": "^1.17.5"
   }
 }
